# SDL-Dev-Repo

./: .gitignore  README.md
InterconnectedSoulsSDL/: InterconnectedSoulsSDL.sln  Makefile
InterconnectedSoulsSDL/include/headers/: Game.h  Player.h
InterconnectedSoulsSDL/src/: Game.cpp  Main.cpp  Player.cpp
RayTracerSDL/: CApp.cpp  CApp.hpp  Makefile  a.out  main.cpp  qbImage.cpp  qbImage.hpp
SnakeGameSDL/: SnakeGameSDL.sln
SnakeGameSDL/SnakeGame/: CMakeLists.txt  README.md  SnakeGame.vcxproj  SnakeGame.vcxproj.filters
SnakeGameSDL/SnakeGame/src/: MainSnakegame.cpp  SnakeGame
SnakeGameSDL/SnakeGame/x64/Debug/: SnakeGame.exe.recipe  SnakeGame.ilk  vc143.idb
SnakeGameSDL/SnakeGame/x64/Debug/SnakeGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SnakeGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
